--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -1,17 +1,23 @@
 env:
   browser: true
   es2021: true
+
 extends:
-  - plugin:react-hooks/recommended
-  - plugin:react/recommended
   - airbnb
+  - plugin:react/recommended
+  - plugin:functional/recommended
+  - plugin:react-hooks/recommended
+
 parserOptions:
   ecmaFeatures:
     jsx: true
   ecmaVersion: latest
   sourceType: module
+
 plugins:
   - react
+  - functional
+
 rules:
   import/extensions: 0
   import/no-unresolved: 0
@@ -28,4 +34,3 @@ rules:
   react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
-
