--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "save": "^2.9.0",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4",
