--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-functional": "^5.0.8",
     "formik": "^2.2.9",
     "i18next": "^22.4.14",
+    "leo-profanity": "^1.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
